Fixed dark mode yet again

--- a/styles/manager.scss
+++ b/styles/manager.scss
@@ -195,6 +195,9 @@ header {
   position: relative;
   padding: 0 2rem;
   background-color: #9cadce;
+  &.dark-mode {
+    background-color: rebeccapurple
+  }
 }
 
 .navbar {
@@ -205,7 +208,6 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: black;
 }
 
 .navbar .logo {
